fix: update styles for pop-up windows to fix overlapping elements

--- a/projects/web-mev/src/app/features/workspace-detail/components/metadata/dialogs/add-observation-set-dialog/add-observation-set-dialog.component.scss
+++ b/projects/web-mev/src/app/features/workspace-detail/components/metadata/dialogs/add-observation-set-dialog/add-observation-set-dialog.component.scss
@@ -3,10 +3,7 @@
 }
 
 .mat-dialog-content {
-  min-height: 650px;
-  max-height: none;
-  overflow: visible;
-  position: relative;
+  overflow-y: auto;
 }
 
 .form-control {
@@ -21,14 +18,13 @@ table {
   width: 100%;
 }
 
-.mat-dialog-actions {
-  position: absolute;
-  bottom: 0;
-}
-
 .color-picker-input {
   width: 40px;
   height: 40px;
   margin: 0;
   padding: 0;
+}
+
+.button-panel {
+  margin-top: 25px;
 }
